<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="portfolio.shiikharshah.ui.home.HomeFragment"
        android:label="@string/menu_ride_history"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="portfolio.shiikharshah.ui.gallery.GalleryFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="portfolio.shiikharshah.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_promocode"
        tools:layout="@layout/fragment_slideshow" />
</navigation>